--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@discordjs/opus": "^0.4.0",
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
-    "node-env-run": "^4.0.2"
+    "node-env-run": "^4.0.2",
+    "sentiment": "^5.0.2"
   }
 }
