--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
     "node-env-run": "^4.0.2",
+    "pandemonium": "^2.0.0",
     "sentiment": "^5.0.2"
   }
 }
